[package]
name = "grace"
version = "0.1.0"
authors = ["Vincent Luczkow <vincent.luczkow@gmail.com>",
           "Miranda Gavrin <mirandagavrin@gmail.com"]

[dependencies]
nom = "^4"
libc = "*"
log = "0.4"
rand = "*"
itertools = "*"
maplit = "*"
cached = "*"
lazy_static = "1.3.0"
bytecount = "*"
memchr = "*"
pretty_assertions = "*"
petgraph = "*"
proptest = "*"
indexmap = "*"
difference = "2.0"
regex = "1"

[lib]
name = "grace_lib"
doctest = false

[[bin]]
name = "grace_main"
path = "src/bin.rs"
